Inital env-entry and ejb-ref support